# flask-react-example

./: README.md
backend/: pyproject.toml
backend/src/: main.py
frontend/: .yarnrc.yml  package.json
frontend/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
