[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vadim Korolik <vkorolik@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
